# Vortex-Vision

./: .dvcignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements-frontend.txt  requirements.txt
.dvc/: config
.github/workflows/: ci.yml  retrain.yml
anomaly/: autoencoder.py  classifier.py  event_types.py  transformer_detector.py
api/: auth.py  database.py  event_consumer.py  frame_consumer.py  main.py  middleware.py  state.py  tracing.py
api/routers/: auth.py  events.py  health.py  query.py  streams.py
config/: logging_config.py  settings.py
data/raw/: .gitkeep
detection/: __main__.py  annotator.py  detector.py  worker.py
docker/: api.Dockerfile  detector.Dockerfile  frontend.Dockerfile  mlops.Dockerfile  postgres-init.sql  vlm.Dockerfile  vlm_mock_server.py
frontend/: app.py  utils.py
frontend/pages/: dashboard.py  events.py  monitoring.py  query.py  settings.py  streams.py
infra/argocd/: application.yaml
infra/helm/vortexvision/: Chart.yaml  values.yaml
infra/helm/vortexvision/templates/: NOTES.txt  _helpers.tpl  api-deployment.yaml  configmap.yaml  detector-deployment.yaml  ingress.yaml  serviceaccount.yaml
infra/k8s/base/: api-deployment.yaml  configmap.yaml  detector-deployment.yaml  frontend-deployment.yaml  hpa.yaml  ingress.yaml  kserve-inferenceservice.yaml  kustomization.yaml  mlflow-deployment.yaml  namespace.yaml  network-policy.yaml  pdb.yaml  postgres-deployment.yaml  pvc.yaml  redis-deployment.yaml  secrets.yaml  service-monitor.yaml  vlm-deployment.yaml
infra/k8s/overlays/production/: kustomization.yaml  replica-patch.yaml
infra/terraform/: main.tf  outputs.tf  variables.tf
ingestion/: kafka_consumer.py  stream_manager.py  stream_reader.py
metrics/: .gitkeep
migrations/: env.py
migrations/versions/: 001_initial_schema.py  __init__.py
mlops/: clip_saver.py  dataset.py  dvc.yaml  evaluate.py  extract_features.py  kubeflow_pipeline.py  model_export.py  prepare_data.py  train.py  train_transformer.py
models/: .gitkeep
monitoring/alertmanager/: alertmanager.yml
monitoring/evidently/: drift_monitor.py  drift_worker.py
monitoring/grafana/: dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboards.yaml
monitoring/grafana/provisioning/datasources/: datasources.yaml
monitoring/loki/: loki-config.yaml  promtail-config.yaml
monitoring/prometheus/: prometheus.yml  rules.yaml
scripts/: download_models.py  seed_demo.py  setup_dev.sh
serving/: ray_cluster_config.yaml  ray_serve_app.py
tests/: conftest.py  test_anomaly.py  test_api.py  test_clip_saver.py  test_config.py  test_detector.py  test_ingestion.py
tests/load/: locustfile.py
tests/mocks/: __init__.py
vlm/: __init__.py  nl_query_engine.py  qwen_client.py
