[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vortexvision"
version = "1.0.0"
description = "Real-time multimodal video analytics platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["computer-vision", "anomaly-detection", "mlops", "video-analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
vortexvision-api = "api.main:app"
vortexvision-detector = "detection.worker:main"

[tool.setuptools.packages.find]
include = ["api*", "anomaly*", "config*", "detection*", "ingestion*", "mlops*", "serving*", "vlm*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
exclude = ["migrations/", "tests/load/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["api", "anomaly", "detection", "ingestion", "vlm", "config", "mlops"]
omit = ["tests/*", "migrations/*", "scripts/*", "serving/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.", "raise NotImplementedError"]
