[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vortexvision"
version = "1.0.0"
description = "Real-time multimodal video analytics platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["computer-vision", "anomaly-detection", "mlops", "video-analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
vortexvision-api    = "api.main:app"
vortexvision-worker = "detection.worker:main"

[tool.setuptools.packages.find]
include = ["api*", "anomaly*", "config*", "detection*", "ingestion*", "mlops*", "serving*", "vlm*"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "migrations/",
    "tests/",
    "scripts/",
    "serving/",
    "conftest.py",
    ".venv/",
    "venv/",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = [
    "E501",  # line too long — black handles this
    "B008",  # function calls in default args — FastAPI Depends pattern
    "B904",  # raise from — too noisy in exception handlers
    "B006",  # mutable default argument — used intentionally in dataclasses
]

[tool.ruff.lint.per-file-ignores]
"monitoring/*" = ["E402"]

# ── Black ─────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
    migrations
  | tests
  | scripts
  | serving
  | \.venv
  | venv
)/
'''

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
exclude = ["migrations/", "tests/", "scripts/", "serving/"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["api", "anomaly", "detection", "ingestion", "vlm", "config", "mlops"]
omit = ["tests/*", "migrations/*", "scripts/*", "serving/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
]
